# Gestalt

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  default.nix  fragmentshader.glsl  readme.md  rust-toolchain  shader.frag  shader.vert  test_face.clip  test_shader.wgsl  vertexshader.glsl  voxel_chunk_shader.wgsl  voxel_shader_packed.wgsl
.github/workflows/: rust.yml
core/: Cargo.toml
core/src/: main.rs
core/src/client/: camera.rs  clientmain.rs  mod.rs
core/src/client/render/: mod.rs  tiletextureatlas.rs  voxelmesher.rs
core/src/common/: identity.rs  message.rs  mod.rs  resource.rs  voxelmath.rs
core/src/common/ecs/: mod.rs
core/src/entity/: mod.rs
core/src/resource/: image.rs  mod.rs
core/src/script/: lua.rs  mod.rs
core/src/world/: chunk.rs  mod.rs  tile.rs  voxelarray.rs  voxelpalette.rs  voxelstorage.rs
crates/gestalt-core/: build.rs
crates/gestalt-core/src/: main.rs
crates/gestalt-ecs/: Cargo.toml
crates/gestalt-names/: Cargo.toml
crates/gestalt-names/src/: lib.rs
crates/gestalt-proc-macros/src/: lib.rs
doc/: chunk_data_layout.txt  new chunk stuff.md  notes.md  vertex.md  yaoconversationnotes.txt
gamedata/: main.glu
gestalt/: Cargo.toml  build.rs
gestalt-core/: Cargo.toml  build.rs
gestalt-core/src/: main.rs  main_channels.rs  server.rs
gestalt-core/src/client/: camera.rs  client_config.rs  clientmain.rs  mod.rs
gestalt-core/src/client/render/: array_texture.rs  billboard.rs  drawable.rs  mod.rs  terrain_renderer.rs  tiletextureatlas.rs  voxel_art.rs  voxel_mesher.rs  voxelmesher.rs
gestalt-core/src/common/: directories.rs  growable_buffer.rs  identity.rs  logger.rs  message.rs  mod.rs  namebind.rs  voxelmath.rs
gestalt-core/src/entity/: mod.rs
gestalt-core/src/message_types/: mod.rs  voxel.rs
gestalt-core/src/net/: generated.rs  handshake.rs  mod.rs  net_channel.rs  net_channels.rs  netmsg.rs  preprotocol.rs  reliable_udp.rs  session.rs
gestalt-core/src/resource/: channels.rs  image.rs  mod.rs  provider.rs  retrieval.rs
gestalt-core/src/script/: lua.rs  mod.rs
gestalt-core/src/world/: chunk.rs  fsworldstorage.rs  mod.rs  tile.rs  tilespace.rs  voxelarray.rs  voxelspace.rs  voxelstorage.rs
gestalt-logger/: Cargo.toml
gestalt-logger/src/: lib.rs
gestalt-names/: Cargo.toml  build.rs
gestalt-names/src/: lib.rs
gestalt-proc-macros/: Cargo.toml
gestalt-proc-macros/src/: lib.rs
gestalt/src/: buffer.rs  chunk_mesher.rs  cpu_pool.rs  game.rs  input.rs  lib.rs  logger.rs  main.rs  metrics.rs  names.rs  network.rs  player.rs  renderer.rs  renderpass.rs
gestalt/src/client/: euc_renderer.rs  input.rs  mod.rs  render_traits.rs  renderer.rs  texture.rs  tileart.rs
gestalt/src/client/client-old/: input.rs  mod.rs  renderer.rs
gestalt/src/common/: identity.rs  localization.rs  message.rs  mod.rs  network.rs  resource.rs  voxelmath.rs
gestalt/src/core/: message.rs  mod.rs
gestalt/src/entity/: mod.rs
gestalt/src/geometry/: mesh.rs  mod.rs  vertex.rs  vertexgroup.rs
gestalt/src/memory/: allocator.rs  mod.rs  pool.rs  xalloc.rs
gestalt/src/pipeline/: deferred_lighting.rs  deferred_shading.rs  lines.rs  lines_pipeline.rs  mod.rs  occlusion.rs  occlusion_pipeline.rs  pbr_pipeline.rs  postprocess.rs  text.rs  text_pipeline.rs
gestalt/src/registry/: mod.rs
gestalt/src/renderpass/: color_depth_cleared.rs  color_depth_uncleared.rs  deferred_lighting.rs  deferred_shading.rs  lines.rs  mod.rs  occlusion.rs  pbr_main.rs  postprocess.rs
gestalt/src/shader/: bsdf.inc  debug_vis.inc  deferred_lighting.frag  deferred_shading.frag  deferred_shading.vert  mod.rs  occlusion.frag  occlusion.vert  pbr.frag  pbr.vert  phong.inc  text.frag  text.vert  tonemapper.frag  tonemapper.vert  util.inc
gestalt/src/util/: aabb.rs  event.rs  logger.rs  message.rs  mod.rs  noise.rs  transform.rs  voxelmath.rs
gestalt/src/voxel/: array_storage.rs  mod.rs  subdivmath.rs  subdivspace.rs  subdivstorage.rs  traits.rs  voxelarray.rs  voxelevent.rs  voxelmath.rs  voxelstorage.rs
gestalt/src/world/: chunk.rs  dimension.rs  gen_cache.rs  mod.rs  space.rs  tile.rs  voxelevent.rs  voxelstorage.rs
gestalt/src/world/generators/: mod.rs
gestalt_bin/: Cargo.toml
gestalt_bin/src/: main.rs
imgui-rs/: Cargo.toml
imgui-rs/imgui-sys/src/: bindings.rs
imgui-rs/src/: io.rs  lib.rs  style.rs  utils.rs
imgui-rs/src/render/: draw_data.rs
imgui-rs/src/window/: mod.rs
lumberjack/: Cargo.toml
lumberjack/src/: lib.rs
make_names/: Cargo.toml  example_build.rs
make_names/src/: lib.rs
notes/: messagepassingnotes.txt  todo.txt
src/: .main.rs.swo  buffer.rs  chunk_mesher.rs  entity.rs  game.rs  input.rs  logger.rs  main.rs  mesh_simplifier.rs  network.rs  octree_mesher.rs  player.rs  renderer.rs  renderpass.rs  software_raycaster.rs
src/client/: dwarfmode.rs  euc_renderer.rs  materialart.rs  mod.rs  render_traits.rs  renderer.rs  simplerenderer.rs  software_raycaster.rs
src/common/: mod.rs
src/common/ecs/: mod.rs
src/common/gelatotype/: mod.rs
src/geometry/: mesh.rs  mod.rs  vertex.rs  vertexgroup.rs
src/memory/: mod.rs  pool.rs
src/pipeline/: chunk_pipeline.rs  lines_pipeline.rs  mod.rs  skybox_pipeline.rs  text_pipeline.rs
src/registry/: mod.rs
src/render/: dwarfmode.rs  mod.rs  simplechunk.rs
src/shader/: chunks.frag  chunks.vert  lines.frag  lines.vert  mod.rs  skybox.frag  skybox.vert
src/util/: axis.rs  config.rs  coord3.rs  cubeaxis.rs  event.rs  logger.rs  mod.rs  num.rs  numbers.rs  transform.rs  vec3.rs  voxelmath.rs  voxelutil.rs
src/voxel/: block.rs  coord3.rs  material.rs  mod.rs  subdivmath.rs  subdivspace.rs  subdivstorage.rs  voxelarray.rs  voxelevent.rs  voxelmath.rs  voxelspace.rs  voxelstorage.rs  voxelstorage.rs~  vspalette.rs
src/vulkano_win/: mod.rs
src/world/: chunk.rs  dimension.rs  mod.rs  space.rs  tile.rs  voxelevent.rs
src/world/generators/: mod.rs
src/world_vg/: chunk.rs  dimension.rs  mod.rs
src/world_vg/generators/: mod.rs  (+1 more)
textures/hdr/: grass_irr.hdr  grass_rad.hdr
toolbox/: Cargo.toml
toolbox/src/: lib.rs  transform.rs
vulkano-shaders/: Cargo.toml
(+1187 files in other folders)
