[package]
name = "gestalt_core"
version = "0.0.1"
authors = ["Emily 'Gyro' C. <gyrocoder@gmail.com>", "trashbyte"]
edition = "2021"

[dependencies]

base64 = "0.13.0"
bimap = { version = "0.6.2", features = ["serde"] }
byteorder = "1.3.4"
chrono = "0.4.19"
crossbeam-channel = "0.5.2"
futures = "0.3.19"
glam = {version = "0.20.2", features = ["serde", "rand"]}
hashbrown = { version = "0.12.0", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.11"
num = "0.4.0"
parking_lot = "0.12.0"
pollster = "0.2.1" # Provides `block_on()` to wait for futures from sync code
rand = "0.7"
rand_core = "0.5"
rmp = "0.8.10"
rmp-serde = "1.0.0"
ron = "0.7.0"
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.1"
shipyard = {version = "0.5.0", features = ["parallel", "serde1"]}
simplelog = "0.11.2"
string_cache = "0.8"
#tar = "0.4.38"
thiserror = "1.0.30"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

# Network
laminar = "0.5.0" 

# Scripting
mlua = { version = "0.7.1", features = ["luajit", "luajit52", "vendored", "serialize"] }

# Rendering
rend3 = { version = "^0.2.0", git = "https://github.com/BVE-Reborn/rend3", rev = "c42f758d07e1d9c650d2d5239527bd97f7111cb8" }
rend3-routine = { version = "^0.2.0", git = "https://github.com/BVE-Reborn/rend3", rev = "c42f758d07e1d9c650d2d5239527bd97f7111cb8" }
wgpu = { version = "0.12", features = ["spirv"] }
winit = "0.26.1"
#profiling = {version = "1", features = ["profile-with-tracy"] }
#tracing-tracy = "0.8.0"

# Image loading
image = "0.23.8"
texture_packer = "0.23.1"

# Possible options for cryptography...
ed25519-dalek = { version = "1.0.1", features = ["serde", "alloc", "batch"]}
ed25519 = { version = "1.3.0", features = ["alloc", "pem", "serde_bytes"] }
pkcs8 = { version = "0.8.0", features = ["alloc", "encryption", "pem", "rand", "std"]}
spki = "0.5.4"
snow = "0.9"
signature = "1.5.0"
# sodiumoxide = "0.2.6"