[package]
name = "gestalt_core"
version = "0.0.1"
authors = ["Emily 'Gyro' C. <gyrocoder@gmail.com>", "trashbyte"]
edition = "2021"

[dependencies]
#Internal
gestalt_names = { path = "../gestalt-names" }
gestalt_proc_macros = { path = "../gestalt-proc-macros" }

toolbelt = { git = "https://github.com/trashbyte/toolbelt" }

# External
#pollster = "0.2.1" # Provides `block_on()` to wait for futures from sync code
#bimap = { version = "0.6.2", features = ["serde"] }
#byteorder = "1.3.4"
# crossbeam-channel = "0.5.2"
chrono = "0.4.19"
futures = "0.3.19"
#fxhash = "0.2"
glam = {version = "0.20.2", features = ["serde", "rand"]}
lazy_static = "1.4.0"
log = "0.4.11"
num = "0.4.0"
parking_lot = "0.12.0"
rand = "0.7"
rand_core = "0.5"
rmp = "0.8.10"
rmp-serde = "1.0.0"
ron = "0.7.0"
serde = { version = "1.0.108", features = ["derive"] }
serde_json = "1.0.79"
sha2 = "0.10.1"
string_cache = "0.8"
thiserror = "1.0.30"
xxhash-rust = { version = "0.8.5", features = ["xxh3", "const_xxh3"] }

# This is what I consider the short-list of "I'm pulling in too many deps, 
# let's rewrite this and have fewer deps when we have the energy." 
# enum_variant_macros = "0.2.0"
base64 = "0.13.0"
simplelog = "0.11.2"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
vu64 = "0.1.5"

# Network
laminar = { version = "0.5.2", git = "https://github.com/NotGyro/laminar", rev = "23290f37605b52dfde7f1e84a74a4255c8358f4a" } 
tokio = { version = "1.19.2", features = ["full", "sync", "rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }

# Scripting
mlua = { version = "0.7.1", features = ["luajit", "luajit52", "vendored", "serialize"] }

# Rendering
rend3 = { version = "^0.2.0", git = "https://github.com/BVE-Reborn/rend3", rev = "c42f758d07e1d9c650d2d5239527bd97f7111cb8" }
rend3-routine = { version = "^0.2.0", git = "https://github.com/BVE-Reborn/rend3", rev = "c42f758d07e1d9c650d2d5239527bd97f7111cb8" }
wgpu = { version = "0.12", features = ["spirv"] }
winit = "0.26.1"

# Image loading
image = "0.24.1"

# Cryptography
ed25519-dalek = { version = "1.0.1", features = ["serde", "alloc", "batch"]}
ed25519 = { version = "1.3.0", features = ["alloc", "pem", "serde_bytes"] }
pkcs8 = { version = "0.8.0", features = ["alloc", "encryption", "pem", "rand", "std"]}
snow = "0.9"
signature = "1.5.0"

[build-dependencies]
walkdir = "~2.3.2"
regex = "~1.5.6"

[dev-dependencies]
tempfile = "3.3.0"