cargo-features = ["edition2024"]
[package]
name = "gestalt_core"
version = "0.0.1"
authors = ["Emily 'Gyro' C. <gyrocoder@gmail.com>", "trashbyte"]
edition = "2024"

[dependencies]
#Internal
gestalt_names = { path = "../gestalt-names" }
gestalt_proc_macros = { path = "../gestalt-proc-macros" }

toolbelt = { git = "https://github.com/trashbyte/toolbelt" }

# External
#pollster = "0.2.1" # Provides `block_on()` to wait for futures from sync code
#bimap = { version = "0.6.2", features = ["serde"] }
#byteorder = "1.3.4"
# crossbeam-channel = "0.5.2"
chrono = "0.4.19"
clap = { version = "4.5.19", features = ["derive"] }
futures = "0.3.19"
#fxhash = "0.2"
glam = {version = "0.23", features = ["serde", "rand"]}
lazy_static = "1.4.0"
log = "0.4.11"
num = "0.4.0"
once_cell = "1.17"
parking_lot = "0.12.0"
rand = "^0.8"
rand_core = "0.6.4"
semver = { version = "1.0.23", features = ["default", "std", "serde"]}
sha2 = "0.10.1"
string_cache = "0.8"
thiserror = "1.0.30"
xxhash-rust = { version = "0.8.5", features = ["xxh3", "const_xxh3"] }
nohash = "0.2"

# Serialization 
rmp = "0.8.14"
rmp-serde = "1.3.0"
ron = "0.8" # Mostly useful for heavily-structured user data.
serde = { version = "1.0.210", features = ["derive"] }
serde_with = {version = "3.9.0", features = ["default", "base64"]}
serde_with_macros = "3.9.0"
serde_json = "1.0.79"
toml = "0.8.19"
toml_edit = "0.22.20" # Prefer non-destructive (comment-preserving) toml for user configs

# Network
laminar = { version = "0.5.2", git = "https://github.com/NotGyro/laminar", rev = "23290f37605b52dfde7f1e84a74a4255c8358f4a" } 
tokio = { version = "1.20.4", features = ["full", "sync", "rt", "rt-multi-thread", "net", "io-util", "macros", "time"] }

# Rendering
wgpu = { version = "0.15", features = ["spirv"] } # Add renderdoc when it gets stabilized
winit = "0.28"

# Image loading
image = "0.24"

# Cryptography
ed25519-dalek = { version = "^2.1", features = ["serde", "alloc", "batch"]}
ed25519 = { version = "^2.2", features = ["alloc", "pem", "serde_bytes"] }
snow = "0.9"
signature = { version = ">=2.0, <2.3", features = ["std", "alloc"] }
aes-gcm = {version = "^0.10", features = ["aes", "alloc", "getrandom", "std", "rand_core"]}
aes = "0.8.4"
argon2 = "0.5.3"
password-hash = "0.5.0" # for use with argon2

# ECS (There is a strong chance this will be replaced with our own ECS later)
hecs = { version = "0.10", features = ["serde"]}

# This is what I consider the short-list of "I'm pulling in too many deps, 
# let's rewrite this and have fewer deps when we have the energy." 
# enum_variant_macros = "0.2.0"
bytemuck = { version = "1.13", features = ["derive"] }
base64 = "0.21"
simplelog = "0.12"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
vu64 = "0.1.11"

[build-dependencies]
walkdir = "~2.3.2"
regex = "~1.7"

[dev-dependencies]
tempfile = "3.3.0"
