[package]
name = "gestalt_logger"
version = "0.0.1"
authors = ["Emily 'Gyro' C. <gyrocoder@gmail.com>", "trashbyte"]
edition = "2021"

[dependencies]
chrono = "0.4.19"
crossbeam-channel = "0.5.2"
hashbrown = { version = "0.12.0", features = ["serde"] }
lazy_static = "1.4.0"
log = "0.4.11"
parking_lot = "0.12.0"