cargo-features = ["edition2024"]
[package]
name = "gestalt_proc_macros"
version = "0.0.1"
authors = ["Emily 'Gyro' C. <gyrocoder@gmail.com>", "trashbyte"]
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0.86"
syn = { version = "2.0", features = ["full", "parsing", "proc-macro"] }
quote = "1.0"
